AdBooker * Fixed a z-index issue with the adverts on the details pane

--- a/apps/ab/ui/_css/general/ab_details.less
+++ b/apps/ab/ui/_css/general/ab_details.less
@@ -289,13 +289,12 @@
 		}
 		&.active {
 			opacity: 1;
-			z-index: 7;
+			z-index: 16;
 			background-color: #ccc;
 			border:none;
 			&.multi {
 				border: 1px solid #999;
 				box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-
 			}
 		}
 	}
